# RawFileReader

./: .gitignore  CHANGELOG.md  README.md  converter.bat  example.py  gui.py  main.py  pyproject.toml  requirements.txt  web.py
ExampleProgram/Framework/: RawFileReaderExample.py
RawFileExacter/: __init__.py  cli.py  mzml_convert.py  reader.py
csharp/ParallelRawFileReader/: ParallelRawFileReader.csproj  ParallelReader.cs
docs/: API.md  UsingRawFileReader.docx
playground/: README.md  rawfile_client.py  rawfile_server.py  test_arm64_dll.py  test_example_program.py  test_full_functionality.py
src/RawFileReader/: __init__.py  cli.py  reader.py
src/test/: test_rfr.py
