[project]
name = "RawFileReader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "psims>=1.3.5",
    "pythonnet>=3.0.5",
    "tqdm>=4.67.1",
]
[tool.setuptools.packages.find]
where = ["src"]
